@@ -177,6 +177,8 @@
             <!-- # Allow loading dynamic agent used by JOL -->
             -XX:+EnableDynamicAgentLoading
             ${extraJavaVectorArgs}
+            <!-- for arrow-memory -->
+            --add-opens=java.base/java.nio=org.apache.arrow.memory.core,ALL-UNNAMED
         </air.test.jvm.additional-arguments.default>
         <air.test.jvm.additional-arguments>${air.test.jvm.additional-arguments.default}</air.test.jvm.additional-arguments>
 
@@ -2690,6 +2692,37 @@
                                 </conflictingDependencies>
                                 <resources>
                                     <resource>mime.types</resource>
+                                </resources>
+                            </exception>
+                            <exception>
+                                <conflictingDependencies>
+                                    <dependency>
+                                        <groupId>org.apache.arrow</groupId>
+                                        <artifactId>arrow-compression</artifactId>
+                                    </dependency>
+                                    <dependency>
+                                        <groupId>org.apache.arrow</groupId>
+                                        <artifactId>arrow-format</artifactId>
+                                    </dependency>
+                                    <dependency>
+                                        <groupId>org.apache.arrow</groupId>
+                                        <artifactId>arrow-memory-core</artifactId>
+                                    </dependency>
+                                    <dependency>
+                                        <groupId>org.apache.arrow</groupId>
+                                        <artifactId>arrow-memory-netty</artifactId>
+                                    </dependency>
+                                    <dependency>
+                                        <groupId>org.apache.arrow</groupId>
+                                        <artifactId>arrow-memory-netty-buffer-patch</artifactId>
+                                    </dependency>
+                                    <dependency>
+                                        <groupId>org.apache.arrow</groupId>
+                                        <artifactId>arrow-memory-unsafe</artifactId>
+                                    </dependency>
+                                </conflictingDependencies>
+                                <resources>
+                                    <resource>arrow-git.properties</resource>
                                 </resources>
                             </exception>
                             <exception>
